Revision history for ExtUtils-Helpers

{{$NEXT}}

0.026     2016-09-09 19:26:57+02:00 Europe/Amsterdam
          - Fix Win32 dependency

0.025     2016-09-02 09:48:38+02:00 Europe/Amsterdam
          - Remove unconditional dependency on ExtUtils::PL2Bat

0.024     2016-08-16 22:02:31+02:00 Europe/Amsterdam (TRIAL RELEASE)
          - Move pl2bat code to ExtUtils::PL2Bat

0.023     2016-08-06 20:52:34+02:00 Europe/Amsterdam (TRIAL RELEASE)
          - Make split_like_shell always unixy
          - Remove Module::Load dependency
          - Remove done_testing, it requires Test::More 0.88

0.022     2014-03-07 13:27:09CET+0100 Europe/Amsterdam
          Cleaned up remains of former functions
          Skip IO layers on <5.8 for 5.6 compatability
          Don't swallow pl2bat exceptions

0.021     2013-05-06 14:57:29 Europe/Amsterdam
          Always use the right environmental variable
          Use configuration provided manpage extension

0.020     2013-04-29 14:14:20 Europe/Amsterdam
          Fix man3_pagename for top level domains

0.019     2013-04-24 13:24:50 Europe/Amsterdam
          Fix make_executable for '#!/usr/bin/perl'

0.018     2013-04-16 13:51:42 Europe/Amsterdam
          Don't load Pod::Man

0.017     2013-04-15 14:57:34 Europe/Amsterdam
          Fix man3_pagename to properly split dirs

0.016     2013-04-12 15:39:01 Europe/London
          Add some fixes to batch file generation [Christian Walde]

0.015     2013-04-09 15:01:04 Europe/Amsterdam
          Made man3_pagename more flexible with paths
          Reverted pl2bat to a more original state
          Rewrote fixin code
          Re-added detildefy

0.014     2012-02-22 21:42:35 Europe/Amsterdam
          Remove detildefication, defer to File::HomeDir to do it better

0.013     2012-02-13 00:35:33 Europe/Amsterdam
          Do tilde expansion more sensibly on Windows

0.012     2012-02-07 14:04:33 Europe/Amsterdam
          Added detildefy
          Fix up loading on VMS
