@@ -4,10 +4,11 @@ use strict;
 use warnings FATAL => 'all';
 
 use Exporter 5.57 'import';
-our @EXPORT = qw/make_executable detildefy/;
+our @EXPORT = qw/make_executable split_like_shell detildefy/;
 
 use Carp qw/croak/;
 use Config;
+use Text::ParseWords 3.24 qw/shellwords/;
 
 my $layer = $] >= 5.008001 ? ":raw" : "";
 
@@ -28,6 +29,16 @@ sub make_executable {
 	}
 	chmod $current_mode | oct(111), $filename;
 	return;
+}
+
+sub split_like_shell {
+	my ($string) = @_;
+
+	return if not defined $string;
+	$string =~ s/^\s+|\s+$//g;
+	return if not length $string;
+
+	return shellwords($string);
 }
 
 sub detildefy {
